# pydefect-complex

./: .gitignore  CLAUDE.md  PLAN-B.md  PLAN-C.md  PLAN.md  README.md  pyproject.toml
diamond_example/: POSCAR  cache_geometry_N2.json  cache_geometry_N3.json  geometry_summary.txt
examples/: README.md  compare_supercells.py  diamond.py
examples/MAO/: README.md  supercell_info.json
examples/MAO/defect/: complex_defect_in.yaml  defect_summary.txt  geometries_N2.yaml  parameters.yaml
examples/defect/: complex_defect_in.yaml  defect_summary.txt  geometries_N2.yaml  geometries_N3.yaml  parameters.yaml
examples/defect/2B_C1.001_0/: POSCAR  defect_entry.json
examples/defect/2B_C1.002_0/: POSCAR  defect_entry.json
examples/defect/2B_C1.003_0/: POSCAR  defect_entry.json
examples/defect/2B_C1.004_0/: POSCAR  defect_entry.json
examples/defect/2B_C1.005_0/: POSCAR  defect_entry.json
examples/defect/2B_C1.006_0/: POSCAR  defect_entry.json
examples/defect/2B_C1.007_0/: POSCAR  defect_entry.json
examples/defect/2N_C1+B_C1.001_0/: POSCAR  defect_entry.json
examples/defect/2N_C1+B_C1.002_0/: POSCAR  defect_entry.json
examples/defect/2N_C1+B_C1.003_0/: POSCAR  (+1 more)
examples/diamond/: supercell_info.json
src/pydefect_complex/: __init__.py  cli.py  core.py  enumerate.py  graph.py  io.py  log.py  maker.py  structure.py  symmetry.py  tracker.py
tests/: conftest.py  test_api_safety.py  test_cli.py  test_core.py  test_error_paths.py  test_examples.py  test_lattices.py  test_maker.py  test_properties.py  test_symmetry.py  test_tracker.py  test_validate.py  validate.py
(+2285 files in other folders)
