[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pydefect-complex"
version = "0.1.1"
description = "Systematic complex defect generation compatible with pydefect"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydefect",
    "pymatgen",
    "scipy",
    "numpy",
    "pyyaml",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "hypothesis"]
progress = ["tqdm"]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
pydefect_complex = "pydefect_complex.cli:main"

[tool.pytest.ini_options]
markers = [
    "slow: long-running performance test (N=4 enumeration); skip with -m 'not slow'",
]